--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -14,11 +13,7 @@
    <items>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="240.0" style="-fx-background-color: white;">
          <children>
-            <ImageView fx:id="moonImg" fitHeight="240.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@moon.jpg" />
-               </image>
-            </ImageView>
+            <ImageView fx:id="moonImg" fitHeight="240.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="chooseDayLabel" alignment="CENTER" layoutX="1.0" layoutY="290.0" prefHeight="15.0" prefWidth="240.0" text="27" textFill="#231f9e">
                <font>
                   <Font name="Leelawadee UI Bold" size="30.0" />
